Fixed white gap on right side of page

--- a/source/styles/index.scss
+++ b/source/styles/index.scss
@@ -580,5 +580,9 @@ div.jsactive pre {
   }
 }
 
+html, body {
+  overflow-x: hidden; 
+}
+
 @import 'railscasts';
 @import 'carbonads';
